Fixes navbar jumping to two lines when it ran out of room on non mobile layouts

--- a/style.css
+++ b/style.css
@@ -2183,7 +2183,7 @@ h5.home_date {
     .navbar.mobile .navbar-toggle {
         display: inline-block;
         /*position: absolute;*/
-        top: 8px;
+        /*top: 8px;*/
     }
 
     .navbar.mobile .visible-sm {
